modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/admin/css/main.scss
$medium-gray: #909295;
$text-color: #474A4B;

#wrapper .osb-portlet-admin .addresses .w50 {
	float: left;
	padding: 0;
	width: 50%;
}

.osb-portlet-admin {
	table {
		td {
			vertical-align: top;
		}

		.inactive td {
			background-color: #FCC;
		}

		.lfr-role-column {
			min-width: 0;
		}
	}

	.account-environment {
		.environment-detail {
			background: #F8F8F8;
			border: 1px solid #CCC;
			display: inline-block;
			margin: 0;
			vertical-align: top;
			width: 100%;

			.list {
				margin: 0;
				padding: 0;

				li {
					border-bottom: 1px solid #CCC;
					list-style: none;
					padding: 1em;

					&:hover {
						background-color: #CCC;
					}

					&:last-child {
						border-bottom-width: 0;
					}

					.data {
						font-weight: bold;
						text-transform: uppercase;
						width: 100%;
					}

					.data .lfr-table td {
						width: 10%;
					}

					.field {
						font-weight: normal;
						padding-left: 3px;
						text-transform: none;
					}
				}
			}

			.subheader {
				background: url(@theme_image_path@/application/subheader_bg.png) 0 0 repeat-x;
				color: #154B75;
				font-weight: bold;
				padding: 7px;
			}
		}

		.popup {
			.label {
				font-weight: bold;
				text-transform: uppercase;
			}
		}
	}

	.address .aui-field-input {
		width: 350px;
	}

	.addresses .aui-field {
		float: none;
	}

	.auto-complete-container #trigger {
		display: none;
	}

	.child-partners .col-2 {
		width: 30%;
	}

	.child-partners .results-grid {
		padding-left: 25px;
	}

	.collapse, .expand {
		.taglib-text {
			text-decoration: none;
		}
	}

	.form-search .input-group.advanced-search .search-query {
		padding-left: 45px;
	}

	.history {
		a {
			text-decoration: none;
		}

		pre {
			margin: 0;
			padding: 0;
		}

		.audit-entry-set {
			margin: 15px 0;
			overflow: hidden;

			.content {
				margin: 5px;
			}

			.create-date {
				color: #AAA;
				float: right;
			}

			.header {
				border-bottom: 1px solid #D3D3D3;
				font-size: 15px;

				span {
					vertical-align: top;
				}
			}

			.summary {
				font-style: italic;
			}

			.txt-sb {
				font-weight: bold;
			}

			.user-display {
				display: inline-block;
				vertical-align: top;

				.user-avatar {
					background-size: cover;
					display: inline-block;
					height: 20px;
					width: 20px;
				}
			}
		}
	}

	.lfr-search-container .comments textarea {
		height: 30px;
		width: 100%;
	}

	.lfr-textarea {
		width: 500px;
	}

	.multiple-select {
		height: 80px;
	}

	.portlet-body {
		padding: 1em;
	}

	.sub-header {
		.segment {
			color: $medium-gray;
			margin: 0 10px;

			&.first {
				margin-left: 0;
			}

			&.last {
				margin-right: 0;
			}

			.txt-sb {
				color: $text-color;
			}
		}

		.spacer {
			background: $medium-gray;
			border-radius: 2.5px;
			display: inline-block;
			height: 5px;
			vertical-align: middle;
			width: 5px;
		}
	}
}

